compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__return_expr__return_in_nested_blocks.snap
---
source: compiler-core/src/erlang/tests/return_expr.rs
expression: "\npub fn main(x: Int) -> Int {\n  let result = {\n    let inner = {\n      case x > 0 {\n        True -> $return x * 2\n        False -> x\n      }\n    }\n    inner + 1\n  }\n  result\n}"
---
----- SOURCE CODE

pub fn main(x: Int) -> Int {
  let result = {
    let inner = {
      case x > 0 {
        True -> $return x * 2
        False -> x
      }
    }
    inner + 1
  }
  result
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/1]).

-file("project/test/my/mod.gleam", 2).
-spec main(integer()) -> integer().
main(X) ->
    case X > 0 of
    true ->
        X * 2;

    false ->
        Inner = X,
        Result = Inner + 1,
        Result
end.
