compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__return_expr__return_with_anonymous_function_scope.snap
---
source: compiler-core/src/erlang/tests/return_expr.rs
expression: "\npub fn main() -> Int {\n  let f = fn(x) {\n    case x > 0 {\n      True -> $return x  // This should return from the anonymous function, not main\n      False -> 0\n    }\n  }\n  let result = f(5)\n  result + 10\n}"
---
----- SOURCE CODE

pub fn main() -> Int {
  let f = fn(x) {
    case x > 0 {
      True -> $return x  // This should return from the anonymous function, not main
      False -> 0
    }
  }
  let result = f(5)
  result + 10
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    F = fun(X) -> case X > 0 of
        true ->
            X;

        false ->
            0
    end end,
Result = F(5),
Result + 10.
