compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__return_expr__return_with_bit_arrays.snap
---
source: compiler-core/src/erlang/tests/return_expr.rs
expression: "\npub fn main(x: Int) -> BitArray {\n  case x > 0 {\n    True -> $return <<x:32>>\n    False -> <<0:32>>\n  }\n}"
---
----- SOURCE CODE

pub fn main(x: Int) -> BitArray {
  case x > 0 {
    True -> $return <<x:32>>
    False -> <<0:32>>
  }
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/1]).

-file("project/test/my/mod.gleam", 2).
-spec main(integer()) -> bitstring().
main(X) ->
    case X > 0 of
    true ->
        <<X:32>>;

    false ->
        <<0:32>>
end.
