compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__return_expr__return_with_boolean_logic.snap
---
source: compiler-core/src/erlang/tests/return_expr.rs
expression: "\npub fn main(a: Bool, b: Bool) -> Bool {\n  case a && b {\n    True -> $return True\n    False -> a || b\n  }\n}"
---
----- SOURCE CODE

pub fn main(a: Bool, b: Bool) -> Bool {
  case a && b {
    True -> $return True
    False -> a || b
  }
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/2]).

-file("project/test/my/mod.gleam", 2).
-spec main(boolean(), boolean()) -> boolean().
main(A, B) ->
    case A andalso B of
    true ->
        true;

    false ->
        A orelse B
end.
