compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__return_expr__return_with_custom_type.snap
---
source: compiler-core/src/erlang/tests/return_expr.rs
expression: "\npub type Person {\n  Person(name: String, age: Int)\n}\n\npub fn main() -> Person {\n  $return Person(\"Alice\", 30)\n}"
---
----- SOURCE CODE

pub type Person {
  Person(name: String, age: Int)
}

pub fn main() -> Person {
  $return Person("Alice", 30)
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).
-export_type([person/0]).

-type person() :: {person, binary(), integer()}.

-file("project/test/my/mod.gleam", 6).
-spec main() -> person().
main() ->
    {person, <<"Alice"/utf8>>, 30}.
