compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__return_expr__return_with_float_operations.snap
---
source: compiler-core/src/erlang/tests/return_expr.rs
expression: "\npub fn main(x: Float) -> Float {\n  case x >. 0.0 {\n    True -> $return x *. 2.5\n    False -> 0.0\n  }\n}"
---
----- SOURCE CODE

pub fn main(x: Float) -> Float {
  case x >. 0.0 {
    True -> $return x *. 2.5
    False -> 0.0
  }
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/1]).

-file("project/test/my/mod.gleam", 2).
-spec main(float()) -> float().
main(X) ->
    case X > +0.0 of
    true ->
        X * 2.5;

    false ->
        +0.0
end.
