compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__return_expr__return_with_list.snap
---
source: compiler-core/src/erlang/tests/return_expr.rs
expression: "\npub fn main() -> List(Int) {\n  $return [1, 2, 3]\n}"
---
----- SOURCE CODE

pub fn main() -> List(Int) {
  $return [1, 2, 3]
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> list(integer()).
main() ->
    [1, 2, 3].
